--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.4.0",
     "@react-native-firebase/auth": "^10.4.0",
+    "@react-native-firebase/database": "^10.4.1",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "firebase": "^8.2.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.1.0",
