--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.63.4",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.3",
     "react-native-paper": "^4.5.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
