--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^10.4.0",
     "@react-native-firebase/auth": "^10.4.0",
     "@react-native-firebase/database": "^10.4.1",
+    "@react-native-firebase/storage": "^10.4.1",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -26,13 +27,14 @@
     "react-native": "0.63.4",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
-    "react-native-image-picker": "^3.1.3",
     "react-native-paper": "^4.5.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
